[IMP] ol_product_configurator

--- a/ol_product_configurator/views/attribute_value_views.xml
+++ b/ol_product_configurator/views/attribute_value_views.xml
@@ -19,6 +19,7 @@
         <field name="inherit_id" ref="product.product_attribute_value_list" />
         <field name="arch" type="xml">
             <field name="name" position="after">
+                <field name="product_id" />
                 <field name="company_ids" widget="many2many_tags" />
             </field>
         </field>
